--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -28,10 +28,21 @@ a:hover {
 
 body {
   margin: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
